# Heron

./: Board Testing Notes.txt  README.md
Expanders/main/: CMakeLists.txt  I2Cdefs.h  expanders.cpp  expanders.h  main.cpp
FullProject/: CMakeLists.txt  sdkconfig  sdkconfig.old
FullProject/components/FastLED-idf/: chipsets.h
FullProject/components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
FullProject/components/lvgl_esp32_drivers/lvgl_tft/: ili9341-Backup2.c
FullProject/main/: BPM.h  BoardNotes.txt  CMakeLists.txt  I2Cdefs.h  LED.cpp  LED.h  MIDIsys.cpp  MIDIsys.h  Screen.c  Screen.h  Sequencer.cpp  Sequencer.h  axoVar.h  expanders.cpp  expanders.h  idf_component.yml  main.cpp
Heron_Project/: sdkconfig  sdkconfig.old
Heron_Project/components/FastLED-idf/: chipsets.h
Heron_Project/components/lvgl/src/lv_font/: novamono_26.c  novamono_60.c
Heron_Project/main/: BoardNotes.txt  I2Cdefs.h  Keyboard.cpp  Keyboard.h  LED.h  MIDIsys.cpp  Screen.c  Sequencer.cpp  Sequencer.h  UIstuff.txt  axoVar.cpp  axoVar.h  expanders.cpp  main.cpp
LEDs/src/: main.cpp
MIDI/: CMakeLists.txt
MIDI/main/: MIDIdefs.h  main.cpp
RTOStest/main/: main.cpp
lv_port_esp32/: setup.txt
lv_port_esp32/components/: lv_conf.h
lv_port_esp32/components/lvgl/src/: lv_conf_internal.h
lv_port_esp32/components/lvgl/src/lv_font/: lv_font.mk  novamono_28.c  novamono_36.c  novamono_44.c  novamono_48.c
lv_port_esp32/espPNG/: feedback55.c  settings55 (2).c  sliders55-2.c  sliders55.c
(+2 files in other folders)
