
idf_component_register(SRCS "Screen.c" "Keyboard.cpp" "Sequencer.cpp" "LED.cpp" "MIDIsys.cpp" "axoVar.cpp" "expanders.cpp" "main.cpp"
                       INCLUDE_DIRS "F:/Capstone/Heron/FullProject/components/FastLED-idf" "F:/Capstone/Heron/FullProject/components/lvgl" "F:/Capstone/Heron/FullProject/components/lvgl_esp32_drivers" "F:/Capstone/Heron/FullProject/components/lv_examples")