
idf_component_register(SRCS "Keyboard.cpp" "Screen.c" "Sequencer.cpp" "LED.cpp" "MIDIsys.cpp" "axoVar.cpp" "expanders.cpp" "main.cpp"
                       INCLUDE_DIRS "F:/Capstone/Heron/Heron_Project/components/FastLED-idf" "F:/Capstone/Heron/Heron_Project/components/lvgl" "F:/Capstone/Heron/Heron_Project/components/lvgl_esp32_drivers" "F:/Capstone/Heron/Heron_Project/components/lv_examples")